bonus/confs/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-wil42-deployment
  labels:
    app: app-wil42
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-wil42 
  template:
    metadata:
      labels:
        app: app-wil42
    spec:
      containers:
      - name: app-wil42
        image: wil42/playground:v2
        ports:
        - containerPort: 8888

---

apiVersion: v1
kind: Service
metadata:
  name: app-wil42-service
  namespace: gitlab
spec:
  selector:
    app: app-wil42
  ports:
    - protocol: TCP
      port: 8888
      targetPort: 8888
  type: LoadBalancer
